fix jump content and height of title card

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  min-height: 74px;
+  height: 74px;
   z-index: 101;
 }
 
